--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,13 @@ futures = "0.1"
 serde_json = "1.0"
 itertools = "0.8.0"
 tokio-core = "0.1"
-rpassword = "3.0.2"
 serde_derive = "1.0"
 lazy_static = "1.3.0"
-clap = {version = "~2.27.0", features = ["yaml"]}
+clap = { version = "~2.27.0", features = ["yaml"] }
 chrono = { version = "0.4", features = ["serde"] }
+
+analysis = { path = "src/analysis" }
+engine = { path = "src/engine" }
+input = { path = "src/input" }
+options = { path = "src/options" }
+okta = { path = "src/okta" }
