--- a/src/engine/Cargo.toml
+++ b/src/engine/Cargo.toml
@@ -10,5 +10,10 @@ edition = "2018"
 rpassword = "3.0.2"
 regex = "1"
 rayon = "1.1"
+serde = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
 
 input = {path = "../input"}
+options = {path = "../options"}
